<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:showDividers="beginning|middle" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4" >

        <Button
            android:id="@+id/contactBtn"
            style="@style/LargeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:drawableLeft="@drawable/contact"
            android:fadingEdge="horizontal"
            android:focusable="false"
            android:paddingLeft="80dp"
            android:paddingRight="70dp"
            android:text="@string/choose_contact"
            android:textColor="#ffffff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp" >

        <Button
            android:id="@+id/dateBtn"
            style="@style/SmallButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:drawableLeft="@drawable/date"
            android:text="@string/set_date"
            android:textColor="#ffffff" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.12"
            android:background="#00000000"
            android:minWidth="0dp" />

        <Button
            android:id="@+id/timeBtn"
            style="@style/SmallButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:drawableLeft="@drawable/time"
            android:text="@string/set_time"
            android:textColor="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1" >

        <CheckBox
            android:id="@+id/chkIntervals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/repeat_msg" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/expandLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/intervalBtn"
            style="@style/SmallButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:drawableLeft="@drawable/times"
            android:text="@string/intervals"
            android:textColor="#ffffff" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.12"
            android:background="#00000000"
            android:minWidth="0dp" />

        <Button
            android:id="@+id/noOfTimesBtn"
            style="@style/SmallButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:drawableLeft="@drawable/repeat"
            android:text="@string/repeat"
            android:textColor="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/callLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp" >
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/smsLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/smsBtn"
            style="@style/LargeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/enter_sms"
            android:textColor="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charges" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/lastLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp" >

        <Button
            android:id="@+id/saveBtn"
            style="@style/SmallButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:onClick="Save"
            android:text="@string/save"
            android:textColor="#ffffff" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.12"
            android:background="#00000000"
            android:minWidth="0dp" />

        <Button
            android:id="@+id/cancelBtn"
            style="@style/SmallButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/cancel"
            android:textColor="#ffffff" />
    </LinearLayout>

</LinearLayout>
</ScrollView>