<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="30dp"
        android:showDividers="beginning|middle" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="9dp" >

            <TextView
                android:id="@+id/eventTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/event_type"
                android:textColor="#000000" />

            <TextView
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.12"
                android:text="@string/colon"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/eventDataTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="9dp" >

            <TextView
                android:id="@+id/lastEventTimeTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/last_event_name"
                android:textColor="#000000" />

            <TextView
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.12"
                android:text="@string/colon"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/lastEventTimeDataTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="9dp" >

            <TextView
                android:id="@+id/contactTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/contact_name"
                android:textColor="#000000" />

            <TextView
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.12"
                android:text="@string/colon"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/contactDataTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text=""
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/smsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="9dp" >

            <TextView
                android:id="@+id/smsTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/message"
                android:textColor="#000000" />

            <TextView
                android:layout_width="2dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.12"
                android:text="@string/colon"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/smsDataTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:lines="4"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lastLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp" >

            <Button
                android:id="@+id/homeBtn"
                style="@style/SmallButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:onClick="Save"
                android:text="@string/home"
                android:textColor="#ffffff" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.12"
                android:background="#00000000"
                android:minWidth="0dp" />

            <Button
                android:id="@+id/cancelBtn"
                style="@style/SmallButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/cancel"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>